name:                lifted-async
version:             0.1.1
synopsis:            Run lifted IO operations asynchronously and wait for their results
homepage:            https://github.com/maoe/lifted-async
bug-reports:         https://github.com/maoe/lifted-async/issues
license:             BSD3
license-file:        LICENSE
author:              Mitsutoshi Aoe
maintainer:          Mitsutoshi Aoe <maoe@foldr.in>
copyright:           (C) 2012 Mitsutoshi Aoe
category:            Concurrency
build-type:          Simple
cabal-version:       >= 1.8

description:
  This package provides IO operations from @async@ package lifted to any
  instance of 'MonadBase' or 'MonadBaseControl'.

library
  exposed-modules:
    Control.Concurrent.Async.Lifted
  build-depends:
      base >= 4.3 && < 5
    , async >= 2.0.1
    , lifted-base >= 0.2
    , monad-control >= 0.3.1
    , transformers-base >= 0.4
  ghc-options: -Wall
  hs-source-dirs: src

test-suite test-lifted-async
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: TestSuite.hs
  other-modules:
    Test.Async.Common
    Test.Async.IO
    Test.Async.State
  build-depends:
      base
    , HUnit
    , lifted-async
    , lifted-base
    , monad-control
    , mtl
    , tasty
    , tasty-hunit
    , tasty-th

test-suite regression-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: RegressionTests.hs
  ghc-options: -Wall -O -threaded
  build-depends:
      base
    , async
    , lifted-async
    , mtl
    , tasty-hunit
    , tasty-th

benchmark benchmark-lifted-async
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall -O
  build-depends:
      base
    , async
    , criterion
    , deepseq
    , lifted-async

benchmark benchmark-lifted-async-threaded
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall -O -threaded
  build-depends:
      base
    , async
    , criterion
    , deepseq
    , lifted-async

source-repository head
  type: git
  location: https://github.com/maoe/lifted-async.git
