name:                lifted-async
version:             0.7.0
synopsis:            Run lifted IO operations asynchronously and wait for their results
homepage:            https://github.com/maoe/lifted-async
bug-reports:         https://github.com/maoe/lifted-async/issues
license:             BSD3
license-file:        LICENSE
author:              Mitsutoshi Aoe
maintainer:          Mitsutoshi Aoe <maoe@foldr.in>
copyright:           Copyright (C) 2012-2015 Mitsutoshi Aoe
category:            Concurrency
build-type:          Simple
cabal-version:       >= 1.8
tested-with:
    GHC == 7.8.4
  , GHC == 7.6.3
  , GHC == 7.4.2

extra-source-files:
  README.md
  CHANGELOG.md

description:
  This package provides IO operations from @async@ package lifted to any
  instance of 'MonadBase' or 'MonadBaseControl'.

flag monad-control-1
  description: User moand-control == 1.*
  default: True
  manual: False

library
  exposed-modules:
    Control.Concurrent.Async.Lifted
    Control.Concurrent.Async.Lifted.Safe
  build-depends:
      base >= 4.5 && < 4.9
    , async >= 2.0.1 && < 2.1
    , lifted-base >= 0.2 && < 0.3
    , transformers-base >= 0.4 && < 0.5
  if flag(monad-control-1)
    build-depends:
        constraints >= 0.2 && < 0.5
      , monad-control == 1.0.*
  else
    build-depends:
      monad-control == 0.*
  ghc-options: -Wall
  hs-source-dirs: src

test-suite test-lifted-async
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: TestSuite.hs
  other-modules:
    Test.Async.Common
    Test.Async.IO
    Test.Async.State
    Test.Async.Reader
  build-depends:
      base
    , HUnit
    , lifted-async
    , lifted-base
    , monad-control
    , mtl
    , tasty
    , tasty-hunit == 0.9.*
    , tasty-th

test-suite regression-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: RegressionTests.hs
  ghc-options: -Wall -O -threaded
  build-depends:
      base
    , async
    , lifted-async
    , mtl
    , tasty-hunit == 0.9.*
    , tasty-th

benchmark benchmark-lifted-async
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall -O
  build-depends:
      base
    , async
    , criterion
    , deepseq
    , lifted-async

benchmark benchmark-lifted-async-threaded
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall -O -threaded
  build-depends:
      base
    , async
    , criterion
    , deepseq
    , lifted-async

source-repository head
  type: git
  branch: develop
  location: https://github.com/maoe/lifted-async.git

source-repository this
  type: git
  tag: v0.7.0
  location: https://github.com/maoe/lifted-async.git
